# general

./: .gitignore  README.rst  config.py  requirements.txt  setup.cfg  test-requirements.txt  try.py  try2.py
commutils/: __init__.py  cli.py  essential.py  gy.py  ly.py  monkey_patch.py  reflection.py  yml_config.py
commutils/project_gen/: __init__.py
commutils/project_gen/template/project/: .coveragerc  .testr.conf  README.rst  requirement-conda.txt  requirements.txt  setup.cfg  template_test.pytemplate  test-requirements.txt  tox.ini
commutils/tests/unit/: test_git.py  test_gy.py  test_ly.py
commutils/tests/unit/project_gen/: test_project_gen.py
general/: gs.py  gy.py  gy_old_bak.py  ly.py
general/interpreter/: context.py  runner.py
general/tests/unit/: test_gy.py
