[metadata]
name = {{ project['name'] }}
version = 0.0.1
summary = {{ project['name'] }}
description-file = README.md
author = {{ project['author'] }}
author-email = {{ project['author_email'] }}
home-page = https://github.com/{{ project['git_account'] }}/{{ project['name'] }}.git

classifier =
    Environment :: {{ project['name'] }}
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    {{ project['name'] }}

#[entry_points]
#console_scripts =


[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source


[pbr]
warnerrors = true
autodoc_index_modules = true

